Implemented view, upload and download commands

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,9 @@ set(PROJECT_HEADERS_SERVER
         Server/Commands/Command.h
         Server/Commands/Register.h
         Server/Commands/Login.h
-        Server/Commands/Search.h)
+        Server/Commands/Search.h
+        Server/Commands/Upload.h
+        Server/Commands/Download.h)
 
 set(PROJECT_SOURCES_SERVER
         Server/main.cpp
@@ -20,7 +22,9 @@ set(PROJECT_SOURCES_SERVER
         Server/Commands/Command.cpp
         Server/Commands/Register.cpp
         Server/Commands/Login.cpp
-        Server/Commands/Search.cpp)
+        Server/Commands/Search.cpp
+        Server/Commands/Upload.cpp
+        Server/Commands/Download.cpp)
 
 set(PROJECT_HEADERS_CLIENT
         Client/Client.h
